Refactor source code
Change-Id: Ie55e32c9d4998e7be500936f2241f63ab4171b55